Creación del panel principal.

--- a/Workshop_3/client/index.html
+++ b/Workshop_3/client/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Workshop 2 - Menú</title>
+  <title>Panel Principal</title>
 </head>
 <body>
-  <h1>Workshop 2 - Cursos</h1>
+  <h1>Panel Principal</h1>
   <h2>Menú</h2>
   <ul>
-    <li><a href="create.html">Crear Curso</a></li>
-    <li><a href="list.html">Ver Cursos</a></li>
+    <li><a href="professor.html">Gestión Profesores</a></li>
+    <li><a href="course.html">Gestión Cursos</a></li>
   </ul>
 </body>
 </html>
-
