Incluye link para regresar al menú.

--- a/Workshop_3/client/course.html
+++ b/Workshop_3/client/course.html
@@ -140,5 +140,7 @@ window.onload = function() {
   </thead>
   <tbody></tbody>
 </table>
+
+<a href="index.html">Regresar a Menú</a>
 </body>
 </html>
