Incluye link para regresar al menú.

--- a/Workshop_3/client/professor.html
+++ b/Workshop_3/client/professor.html
@@ -125,5 +125,6 @@ window.onload = listProfessors;
   </thead>
   <tbody></tbody>
 </table>
+<a href="index.html">Regresar a Menú</a>
 </body>
 </html>
