Reorganización de los archivos en carpetas de html y js. Además, se modifican las rutas en los html para acceder a los js.

--- a/Workshop_4/client/html/course.html
+++ b/Workshop_4/client/html/course.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gestión de Cursos</title>
 <link rel="stylesheet" href="styles.css">
-<script src="course.js" defer></script> <!-- Enlazamos JS externo -->
+<script src="/client/js/course.js" defer></script> <!-- Enlazamos JS externo -->
 </head>
 
 <body>
