--- a/Workshop_4/client/html/professor.html
+++ b/Workshop_4/client/html/professor.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gestión de Profesores</title>
 <link rel="stylesheet" href="styles.css">
-<script src="professor.js" defer></script> <!-- Enlazamos JS externo -->
+<script src="/client/js/professor.js" defer></script> <!-- Enlazamos JS externo -->
 </head>
 <body>
 <h2>Profesores</h2>
