--- a/Workshop_4/client/html/professor.html
+++ b/Workshop_4/client/html/professor.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gestión de Profesores</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="/client/css/styles.css">
 <script src="/client/js/professor.js" defer></script> <!-- Enlazamos JS externo -->
 </head>
 <body>
