Corrección de dirección de archivo.

--- a/Workshop_4/client/html/course.html
+++ b/Workshop_4/client/html/course.html
@@ -32,7 +32,7 @@
   <tbody></tbody>
 </table>
 
-<a href="index.html">Regresar a Menú</a>
+<a href="../index.html">Regresar a Menú</a>
 </body>
 </html>
 
