Corrección de dirección de archivo.

--- a/Workshop_4/client/html/professor.html
+++ b/Workshop_4/client/html/professor.html
@@ -31,6 +31,6 @@
   <tbody></tbody>
 </table>
 
-<a href="index.html">Regresar a Menú</a>
+<a href="../index.html">Regresar a Menú</a>
 </body>
 </html>
