Corrección de dirección de archivo.

--- a/Workshop_4/client/index.html
+++ b/Workshop_4/client/index.html
@@ -9,8 +9,8 @@
   <h1>Panel Principal</h1>
   <h2>Menú</h2>
   <ul>
-    <li><a href="professor.html">Gestión Profesores</a></li>
-    <li><a href="course.html">Gestión Cursos</a></li>
+    <li><a href="../client/html/professor.html">Gestión Profesores</a></li>
+    <li><a href="../client/html/course.html">Gestión Cursos</a></li>
   </ul>
 </body>
 </html>
